Update chkconfig.sh